# AwesomePyKit

./: .gitignore  LICENSE  MANIFEST.in  README.md  RunPyKit.py  RunPyKit.pyw  RunToolBox.pyw  TODO.md  compile.py  compile_ui.py  cuic.py  info.py  information.py  pyproject.toml  requirements.txt  runpykit.py  setup.py
AwesomePyKit/: __init__.py
com/: mapping.py
common/: pkgsmapping.py
help/: About.html  UsingHelp.html
interface/: CheckImportWin.py  CheckImportWin.ui  InformationPanel.py  MainInterface.py  MainInterface.ui  MirrorSourceManager.py  MirrorSourceManager.ui  PackageManager.py  PackageManager.ui  PyInstallerTool.py  PyInstallerTool.ui  PyiToolChoosePyEnv.py  PyiToolChoosePyEnv.ui  __init__.py  check_imports.py  check_imports.ui  choose_env.py  choose_env.ui  download_package.py  download_package.ui  index_url_manager.py  index_url_manager.ui  install_package.py  install_package.ui  main_interface.py  main_interface.ui  package_manager.py  package_manager.ui  pyinstaller_tool.py  pyinstaller_tool.ui  show_downloading.py  show_downloading.ui
logic/: generic_output.py  pyinstaller_tool.py  query_file_path.py
res/: res.py
settings/: __init__.py  abstract_config.py  abstract_settings.py  indexurl_manager.py  package_download.py  package_manager.py  pyinstaller_tool.py
setup/: setup.sln
source/: runpykit.py  versions.py
ui/: __init__.py  environ_chosen.py  environ_chosen.ui  environch.py  environch.ui  generic_output.py  generic_output.ui  impcheck.py  impcheck.ui  imports_check.py  imports_check.ui  index_manager.py  index_manager.ui  indexmgr.py  indexmgr.ui  input_dialog.py  input_dialog.ui  main_entrance.py  main_entrance.ui  mainentry.py  mainentry.ui  package_download.py  package_download.ui  package_install.py  package_install.ui  package_manager.py  package_manager.ui  pkgdload.py  pkgdload.ui  pkginstall.py  pkginstall.ui  pkgmgr.py  pkgmgr.ui  pyinstaller_tool.py  (+8 more)
(+150 files in other folders)
