[build-system]
requires = ["setuptools-scm[toml]>=7.1", "setuptools>=67.6"]
build-backend = "setuptools.build_meta"

[project]
name = "Awespykit"
authors = [
    { name = "hrp", email = "pphrp@qq.com" },
    { name = "hrpzcf", email = "pphrp@qq.com" },
]
readme = "README.md"
license = { text = "GPLv3" }
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Environment :: Win32 (MS Windows)",
    "Operating System :: Microsoft :: Windows :: Windows 7",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]
description = "关于Python的GUI工具箱：包管理、程序打包、切换Pip源、分发包下载、云函数打包"
requires-python = ">=3.7"
dynamic = ["dependencies", "version"]

[project.scripts]
rpk = "awespykit.runpykit:runpykit_sysexit_when_closes"

[tool.black]
line-length = 80
target-version = ["py37"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.setuptools]
platforms = ["win32", "win_amd64"]
include-package-data = false

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
